@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Plugin API: Added message_part_body hook
 - Add initdb.sh to create database from initial.sql script with prefix support (#1490188)
 - Plugin API: Add special onload() method to execute plugin actions before startup (session and GUI initialization)
 - Password plugin: Added 'kpasswd' driver by Peter Allgeyer
